--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
 <section class="slider1 cid-sxWXzSEOkn mbr-fullscreen" id="slider1-0">
     
-    <div class="carousel slide carousel-fade" id="sFU4MpbS7P" data-interval="5000">
+    <div class="carousel slide carousel-fade" id="sFU56NMR2T" data-interval="5000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" class="active" data-target="#sFU4MpbS7P"></li>
-            <li data-slide-to="1" data-target="#sFU4MpbS7P"></li>
-            <li data-slide-to="2" data-target="#sFU4MpbS7P"></li>
+            <li data-slide-to="0" class="active" data-target="#sFU56NMR2T"></li>
+            <li data-slide-to="1" data-target="#sFU56NMR2T"></li>
+            <li data-slide-to="2" data-target="#sFU56NMR2T"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item slider-image item active">
@@ -99,11 +99,11 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sFU4MpbS7P">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sFU56NMR2T">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sFU4MpbS7P">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sFU56NMR2T">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
