--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 
 <section class="slider1 cid-sxWXzSEOkn mbr-fullscreen" id="slider1-0">
     
-    <div class="carousel slide carousel-fade" id="sFU6gH9xeQ" data-interval="5000">
+    <div class="carousel slide carousel-fade" id="sFU6pJgzKY" data-interval="5000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" class="active" data-target="#sFU6gH9xeQ"></li>
-            <li data-slide-to="1" data-target="#sFU6gH9xeQ"></li>
-            <li data-slide-to="2" data-target="#sFU6gH9xeQ"></li>
+            <li data-slide-to="0" class="active" data-target="#sFU6pJgzKY"></li>
+            <li data-slide-to="1" data-target="#sFU6pJgzKY"></li>
+            <li data-slide-to="2" data-target="#sFU6pJgzKY"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item slider-image item active">
@@ -101,11 +101,11 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sFU6gH9xeQ">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sFU6pJgzKY">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sFU6gH9xeQ">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sFU6pJgzKY">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
